--- a/src/file-template-config.json
+++ b/src/file-template-config.json
@@ -1,41 +1,25 @@
 [
   {
-    "name": "React 组件文件",
-    "description": "创建一个基础 React 组件",
+    "name": "npm 配置文件",
+    "description": "创建一个基础 pnpm 配置文件",
     "type": "file",
-    "params": ["filename", "name"],
     "files": [
       {
-        "name": "${filename}.tsx",
+        "name": ".npmrc",
         "content": [
-          "import React from 'react';",
-          "export default function ${filename}-${name}() {",
-          "  return <div>${filename}-${name}</div>;",
-          "}"
+          "# 设置阿里仓库源",
+          "registry=\"https://registry.npmmirror.com\"",
+          "# 在国内使用pnpm安装electron需要配置一下electron的下载路径",
+          "electron_mirror=\"https://npmmirror.com/mirrors/electron/\"",
+
+          "# 为 @byted-mind-note 包配置特定的仓库源",
+          "@byted-mind-note:registry=https://packages.aliyun.com/6558693961e5541a23aa40f3/npm/npm-registry/",
+          "@byted-mind-note:always-auth=true",
+
+          "engine-strict=true",
+          "node-version=16.5.0"
         ]
-      }
-    ]
-  },
-  {
-    "name": "React 组件目录",
-    "description": "创建一个基础 React 组件",
-    "type": "folder",
-    "params": ["filename"],
-    "files": [
-      {
-        "name": "${filename}.tsx",
-        "content": [
-          "import React from 'react';",
-          "export default function ${filename}() {",
-          "  return <div>${filename}</div>;",
-          "}"
-        ]
-      },
-      {
-          "name": "index.ts",
-        "content": ["export * from './${filename}';"]
       }
     ]
   }
 ]
-
